force-app/main/default/objects/Stripe_Payment_Method__c/Stripe_Payment_Method__c.object-meta.xml
<CustomObject>
    <label>Stripe Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 