force-app/main/default/objects/Stripe_Payment_Method__c/fields/Card_Exp_Month__c.field-meta.xml
<CustomField>
    <fullName>Card_Exp_Month__c</fullName>
    <description>Expiration month of the card</description>
    <label>Card Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 