force-app/main/default/objects/Stripe_Payment_Method__c/fields/Card_Exp_Year__c.field-meta.xml
<CustomField>
    <fullName>Card_Exp_Year__c</fullName>
    <description>Expiration year of the card</description>
    <label>Card Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 