force-app/main/default/objects/Stripe_Payment_Method__c/fields/Card_Last4__c.field-meta.xml
<CustomField>
    <fullName>Card_Last4__c</fullName>
    <description>Last 4 digits of the card</description>
    <label>Card Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField> 