force-app/main/default/objects/Stripe_Payment_Method__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is the default payment method for the customer</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField> 