force-app/main/default/objects/Stripe_Payment_Method__c/fields/Stripe_Payment_Method_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Method_ID__c</fullName>
    <description>External ID from Stripe for this payment method</description>
    <externalId>true</externalId>
    <label>Stripe Payment Method ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 