force-app/main/default/objects/Stripe_Payment_Method__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of payment method</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>SEPA Debit</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
            </value>
            <value>
                <fullName>Apple Pay</fullName>
            </value>
            <value>
                <fullName>Google Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 